# knight

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.61976c8  CMakeLists.txt.user.e058b0f  main.cpp
common/: CMakeLists.txt  location.cpp  location.hpp
io/: io.hpp
logic/: CMakeLists.txt  data_manager.cpp  data_manager.hpp  grid.cpp  grid.hpp  location.hpp  logic.cpp  logic.hpp  player.cpp  player.hpp
logic/players/: CMakeLists.txt  knight.cpp  knight.hpp  player.cpp  player.hpp  player_manager.cpp  player_manager.hpp
players/: CMakeLists.txt  bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  player.cpp  player.hpp  player_manager.cpp  player_manager.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
storage/: CMakeLists.txt  file.cpp  file.hpp  storage.hpp
